--- a/locale/zh_Hans/frontend.json
+++ b/locale/zh_Hans/frontend.json
@@ -6,7 +6,7 @@
         "id": "ID"
     },
     "characters": "Characters",
-    "honeyworks_offical_links": "HoneyWorks Offical Links",
+    "honeyworks_official_links": "HoneyWorks Official Links",
     "information": "Information",
     "music_parts": "Music Parts",
     "scene_cards": "Scene Cards",
