--- a/locale/en/frontend.json
+++ b/locale/en/frontend.json
@@ -1,5 +1,27 @@
 {
-    "honeyworks_info": "HoneyWorks Info",
+    "global": {
+        "app_name": "HoneyWorks Info",
+        "events": "Events",
+        "character": "Character",
+        "characters": "Characters",
+        "character_cards": "Character Cards",
+        "honeyworks_info": "HoneyWorks Info",
+        "honeyworks_official_links": "HoneyWorks Official Links",
+        "information": "Information",
+        "music_parts": "Music Parts",
+        "music_part_data": "Music Part Data",
+        "scene_cards": "Scene Cards",
+        "skill": "Skill",
+        "skills": "Skills",
+        "tags": "Tags",
+        "tools": "Tools",
+        "hwpl_calendar": "HWPL Calendar",
+        "about_us": "About Us",
+        "website": "Website",
+        "twitter": "Twitter",
+        "youtube": "YouTube",
+        "related_resources": "Related Resources"
+    },
     "character": {
         "default_card_image": "Default Card Image",
         "general": "General",
@@ -11,19 +33,57 @@
         "birthday": "Birthday",
         "constellation": "Constellation",
         "blood_type": "Blood Type",
+        "description": "Description",
+        "character_cards_num_in_total": "Character Cards ({0} in total)"
+    },
+    "character_card": {
+        "show_character_image": "Show Character Image",
+        "show_evolved": "Show Evolved",
+        "sort_by_colon": "Sort by:",
+        "default": "Default",
+        "ability": "Ability",
+        "release_date": "Release Date",
+        "release_time": "Release Time",
+        "rarity": "Rarity",
+        "image": "Image",
+        "image_evolved": "Image (Evolved)",
+        "icon": "Icon",
+        "icon_evolved": "Icon (Evolved)",
+        "general": "General",
+        "id": "ID",
+        "card_name": "Card Name",
+        "game_statistics": "Game Statistics",
+        "character_card_level": "Character Card Level",
+        "statistics_name": "Name",
+        "statistics_value": "Value",
+        "statistics_value_evolved": "Value (Evolved)",
+        "statistics_total": "Total",
+        "statistics_rythm": "Rythm",
+        "statistics_technic": "Technic",
+        "statistics_groove": "Groove",
+        "statistics_require_exp": "Require EXP",
+        "statistics_require_exp_total": "Require EXP (Total)"
+    },
+    "skill": {
+        "skill_level": "Skill Level",
+        "type": "Type",
+        "typename": {
+            "1": "Stat Bonus",
+            "11": "Score Bonus",
+            "21": "PERFECT Support",
+            "31": "Life Restore",
+            "32": "Avoid Damage",
+            "40": "EXP Bonus",
+            "41": "Combo Bonus",
+            "42": "Combo Support",
+            "90": "Platinum Skill"
+        },
         "description": "Description"
     },
-    "character_card": "Character Card",
-    "characters": "Characters",
-    "honeyworks_official_links": "HoneyWorks Official Links",
-    "information": "Information",
-    "music_parts": "Music Parts",
-    "scene_cards": "Scene Cards",
-    "events": "Events",
-    "tools": "Tools",
-    "hwpl_calendar": "HWPL Calendar",
-    "about_us": "About Us",
-    "website": "Website",
-    "twitter": "Twitter",
-    "youtube": "YouTube"
+    "components": {
+        "resource_tabs": {
+            "unsupported_media_type": "Unsupported Media Type: {0}",
+            "no_resource_available": "No Resource Available"
+        }
+    }
 }
