--- a/locale/en/frontend.json
+++ b/locale/en/frontend.json
@@ -16,11 +16,30 @@
         "tags": "Tags",
         "tools": "Tools",
         "hwpl_calendar": "HWPL Calendar",
+        "unknown": "Unknown",
         "about_us": "About Us",
         "website": "Website",
         "twitter": "Twitter",
         "youtube": "YouTube",
         "related_resources": "Related Resources"
+    },
+    "route": {
+        "///comment: you can export frontend route by": "Object.fromEntries(router.getRoutes().map(({name}) => [name, name]))",
+        "404": "404",
+        "Character Detail": "Character Detail",
+        "Character Card Detail": "Character Card Detail",
+        "Music Part Detail": "Music Part Detail",
+        "Scene Card Detail": "Scene Card Detail",
+        "Event Detail": "Event Detail",
+        "Character List": "Character List",
+        "Character Card List": "Character Card List",
+        "Music Part List": "Music Part List",
+        "Scene Card List": "Scene Card List",
+        "Event List": "Event List",
+        "HWPL Calendar": "HWPL Calendar",
+        "HoneyWorks Official Links": "HoneyWorks Official Links",
+        "About Us": "About Us",
+        "Hello World": "Hello World"
     },
     "character": {
         "default_card_image": "Default Card Image",
@@ -49,11 +68,19 @@
         "image_evolved": "Image (Evolved)",
         "icon": "Icon",
         "icon_evolved": "Icon (Evolved)",
+        "scene_card": "Scene Card",
+        "scene_card_dynamic": "Scene Card (Dynamic)",
+        "scene_card_evolved": "Scene Card (Evolved)",
+        "scene_card_evolved_dynamic": "Scene Card (Evolved, Dynamic)",
+        "mv": "MV",
         "general": "General",
         "id": "ID",
         "card_name": "Card Name",
         "game_statistics": "Game Statistics",
         "character_card_level": "Character Card Level",
+        "level_value": "{0}",
+        "level_value_max": "{0} (Max Before Evolution)",
+        "level_value_max_evolved": "{0} (Max After Evolution)",
         "statistics_name": "Name",
         "statistics_value": "Value",
         "statistics_value_evolved": "Value (Evolved)",
