--- a/locale/en/frontend.json
+++ b/locale/en/frontend.json
@@ -16,6 +16,7 @@
         "tags": "Tags",
         "tools": "Tools",
         "hwpl_calendar": "HWPL Calendar",
+        "gerira_live_query": "Guerrilla Live Query",
         "unknown": "Unknown",
         "about_us": "About Us",
         "website": "Website",
@@ -39,7 +40,8 @@
         "HWPL Calendar": "HWPL Calendar",
         "HoneyWorks Official Links": "HoneyWorks Official Links",
         "About Us": "About Us",
-        "Hello World": "Hello World"
+        "Hello World": "Hello World",
+        "Gerira Live Query": "Guerrilla Live Query"
     },
     "character": {
         "default_card_image": "Default Card Image",
@@ -106,6 +108,15 @@
             "90": "Platinum Skill"
         },
         "description": "Description"
+    },
+    "gerira_live_query": {
+        "refresh": "Refresh",
+        "gerira_room_id": "Guerrilla Room ID",
+        "gerira_level": "Guerrilla Level",
+        "gerira_end_time": "Guerrilla End Time",
+        "notification_title": "New Lv{level} Guerrilla Live",
+        "notification_body": "New Guerrilla Live ({roomId}, LV{level}) appears until {endTime}"
+
     },
     "components": {
         "resource_tabs": {
