--- a/locale/en/frontend.json
+++ b/locale/en/frontend.json
@@ -8,6 +8,7 @@
         "honeyworks_info": "HoneyWorks Info",
         "honeyworks_official_links": "HoneyWorks Official Links",
         "information": "Information",
+        "musics": "Musics",
         "music_parts": "Music Parts",
         "music_part_data": "Music Part Data",
         "scene_cards": "Scene Cards",
@@ -34,6 +35,7 @@
         "Event Detail": "Event Detail",
         "Character List": "Character List",
         "Character Card List": "Character Card List",
+        "Music List": "Music List",
         "Music Part List": "Music Part List",
         "Scene Card List": "Scene Card List",
         "Event List": "Event List",
