--- a/locale/en/frontend.json
+++ b/locale/en/frontend.json
@@ -50,7 +50,7 @@
         "general": "General",
         "id": "ID",
         "name": "Name",
-        "hiragana_name": "Hiragana Name",
+        "hiragana_name": "Name (Hiragana)",
         "character_voice": "Character Voice",
         "height": "Height",
         "birthday": "Birthday",
@@ -94,6 +94,26 @@
         "statistics_groove": "Groove",
         "statistics_require_exp": "Require EXP",
         "statistics_require_exp_total": "Require EXP (Total)"
+    },
+    "music_part": {
+        "title_image": "Title Image",
+        "music_logo": "Logo",
+        "mv": "MV",
+        "music": "Music",
+        "music_lossless": "Music (Lossless)",
+        "general": "General",
+        "id": "Music Part Id",
+        "song_name": "Song Name",
+        "song_hiragana_name": "Song Name (Hiragana)",
+        "part_name": "Part Name",
+        "singer_name": "Singer",
+        "composer": "Composer",
+        "songwriter": "Song Writer",
+        "music_time": "Music Time",
+        "updated_at": "Last Updated",
+        "game_statistics": "Game Statistics",
+        "rank": "Rank",
+        "play_level": "Play Level"
     },
     "skill": {
         "skill_level": "Skill Level",
