--- a/locale/zh_Hans/frontend.json
+++ b/locale/zh_Hans/frontend.json
@@ -26,7 +26,7 @@
         "image_evolved": "人物图（进化后）",
         "icon": "图标",
         "icon_evolved": "图标（进化后）",
-        "general": "信息",
+        "general": "卡片信息",
         "id": "卡片编号",
         "card_name": "名称",
         "game_statistics": "卡片数据",
