--- a/locale/en/frontend.json
+++ b/locale/en/frontend.json
@@ -139,6 +139,9 @@
         "notification_title": "New Lv{level} Guerrilla Live",
         "notification_body": "New Guerrilla Live ({roomId}, Lv{level}) appears until {endTime}"
     },
+    "disclaimer": {
+        "content": "This website does not own the materials, all credits go to its rightful owner, including but not limited to HoneyWorks, flaggs inc. This website is a fan-made database only for research purpose, has no official relation to HoneyWorks."
+    },
     "components": {
         "resource_tabs": {
             "unsupported_media_type": "Unsupported Media Type: {0}",
